# mcp

./: README.md  pyproject.toml  requirements.txt  server.json  server.py
.github/workflows/: ci.yml  publish.yml
